--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
           - section.post-menu-area (buttons below comment)
 */
 
+@-moz-document url-prefix("https://budgetlightforum.com/"), url-prefix("https://github.com") {
+
 /********** banner at top of page **********/
 .d-header {
     height: 4em;
@@ -1398,4 +1400,6 @@ div.dummy-placeholder {
     --line-height-small: 1em;
     --line-height-medium: 1.16em;
     --line-height-large: 1.33em;
+}
+  
 }
